workspace = { members = ["thisactor-derive"] }
[package]
name = "thisactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thisactor-derive = { path = "./thisactor-derive", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1.46.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
